--- a/modal-content.html
+++ b/modal-content.html
@@ -41,8 +41,8 @@
 							<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 								<input class="login-email" id="email" type="email" name="email">
 								<label class="label-email" for="email">Электронная почта</label>
-								<input id="password "type="password" name="password">
-								<label class="label-password" for="password">Пароль</label>
+								<input id="password-label" type="password" name="password">
+								<label class="label-password" for="password-label">Пароль</label>
 								<div class="login-butons">
 									<input type="submit" name="enter" value="ВОЙТИ">
 									<div class="login-check">
@@ -63,22 +63,22 @@
 				</div>
 			</header>
 			<main>
-					<div class="modal-wrapper">
-				  	<div class="modal-content">
-						<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-						<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+				<div class="modal-wrapper">
+				 	<div class="modal-content">
+				  	<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+					  <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
 							<b>Мы обязательно вам ответим!</b>
 							<input class="modal-name" type="text" id="name" name="name">
 							<label for="name">Как вас зовут?</label>
-							<input class="modal-email" type="email" id="email" name="email">
-							<label for="email">Ваша почта для ответа?</label>
-							<textarea  class="modal-suggestions" id="suggestions" name="suggestions" id="suggestions"></textarea>
+							<input class="modal-email" type="email" id="email-adress" name="email">
+							<label for="email-adress">Ваша почта для ответа?</label>
+							<textarea  class="modal-suggestions" id="suggestions" name="suggestions"></textarea>
 							<label for="suggestions">Напишите что нибудь</label>
 							<input type="submit" name="submit" value="Отправить">
 						</form>
 					</div>	
-		
-		</main>
+				</div>
+		  </main>
 		<footer class="main-footer">
 			<section class="footer-social">
 					<h3>social</h3>
