--- a/catalog.html
+++ b/catalog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+	<head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" >
@@ -14,7 +14,7 @@
 					<nav class="main-navigation">
 						<a class="index-logo" href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 						<ul>
-							<li class="first-menu one-units active"><a>Каталог</a>
+							<li class="first-menu one-units active"><a><span class="menu-link">Каталог</span></a>
 								<ul class="sub-menu">
 									<li><a href="#">Новинки</a></li>
 									<li><a>Сливочное</a></li>
@@ -23,8 +23,8 @@
 									<li><a href="#">Мелорин</a></li>
 								</ul>
 							</li>				
-							<li class="first-menu two-units"><a href="#">Доставка и оплата</a></li>
-							<li class="first-menu three-units"><a href="#">О Компании</a></li>
+							<li class="first-menu two-units"><a href="#"><span class="menu-link">Доставка и оплата</span></a></li>
+							<li class="first-menu three-units"><a href="#"><span class="menu-link">О Компании</span></a></li>
 						</ul>
 					</nav>
 					<div class="second-block">
@@ -41,8 +41,8 @@
 								<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 									<input class="login-email" id="email" type="email" name="email">
 									<label class="label-email" for="email">Электронная почта</label>
-									<input id="password "type="password" name="password">
-									<label class="label-password" for="password">Пароль</label>
+									<input class="login-pas" id="password-label" type="password" name="password">
+									<label class="label-password" for="password-label">Пароль</label>
 									<div class="login-butons">
 										<input type="submit" name="enter" value="ВОЙТИ">
 										<div class="login-check">
@@ -53,7 +53,7 @@
 								</form>
 							</div>
 							<div class="basket-wrapper">
-								<a class="users basket" href="#">Пусто</a>
+								<a class="users basket basket-active" href="#">2 товара</a>
 								<div class="basket-of-goods">
 									<div class="table-goods">
 										<ul>
@@ -63,7 +63,7 @@
 											</li>
 											<li><img src="img/orange.jpg" width="35" height="35" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></li>
 											<li>Сливочное с апельсиновым джемом</li>
-											<li class="weight-price">1,5кг&#215;<span>200р.<span/></li>
+											<li class="weight-price">1,5кг&#215;<span>200р.</span></li>
 											<li>300р.</li>
 										</ul>
 										<ul>
@@ -73,7 +73,7 @@
 											</li>
 											<li><img src="img/strawberry.jpg" width="35" height="35" alt="Сливочно-клубничное с присыпкой из белого шоколада"></li>
 											<li>Клубничный пломбир с присыпкой из белого шоколада</li>
-											<li class="weight-price">1,5кг&#215;<span>300р.<span/></li>
+											<li class="weight-price">1,5кг&#215;<span>300р.</span></li>
 											<li>450р.</li>
 										</ul>
 									</div>
@@ -130,7 +130,7 @@
 							<label class="radio-marg-first" for="zero-percent">0%</label>
 							<input class="sort-radio" type="radio" name="fatness" value="ten-percent" id="ten-percent" checked>
 							<label class="radio-marg-two" for="ten-percent">10%</label>
-							<input class="sort-radio"type="radio" name="fatness" value="thirty-percent" id="thirty-percent">
+							<input class="sort-radio" type="radio" name="fatness" value="thirty-percent" id="thirty-percent">
 							<label class="radio-marg-three" for="thirty-percent">30%</label>
 							<input class="sort-radio" type="radio" name="fatness" value="morethirty-percent" id="morethirty-percent">
 							<label class="radio-marg-fore" for="morethirty-percent">выше 30%</label>
@@ -155,7 +155,7 @@
 							<article class="catalog-item">
 								<img src="img/orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 								<span class="price">310 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -163,7 +163,7 @@
 							<article class="catalog-item">
 								<img src="img/coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 								<span class="price">380 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочно-кофейное с кусочками шоколада</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>	
@@ -171,7 +171,7 @@
 							<article class="catalog-item">
 								<img src="img/strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 								<span class="price">355 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочно-клубничное с присыпкой из белого шоколада</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -179,7 +179,7 @@
 							<article class="catalog-item">
 								<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 								<span class="price">415 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -187,7 +187,7 @@
 							<article class="catalog-item">
 								<img src="img/cowberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
 								<span class="price">325 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочное с брусничным джемом</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочное с брусничным джемом</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>	
@@ -195,7 +195,7 @@
 							<article class="catalog-item">
 								<img src="img/bilberry.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники ">
 								<span class="price">410 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочно-черничное с цельными ягодами черники </a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочно-черничное с цельными ягодами черники</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -203,7 +203,7 @@
 							<article class="catalog-item">
 								<img src="img/lime.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
 								<span class="price">375 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочно-лимонное с карамельной присыпкой</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочно-лимонное с карамельной присыпкой</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -211,7 +211,7 @@
 							<article class="catalog-item">
 								<img src="img/chocolate.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
 								<span class="price">320 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочное с шоколадной стружкой</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочное с шоколадной стружкой</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -219,7 +219,7 @@
 							<article class="catalog-item">
 								<img src="img/vanilla.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
 								<span class="price">440 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочно-ванильное с кусочками шоколада</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочно-ванильное с кусочками шоколада</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -227,7 +227,7 @@
 							<article class="catalog-item">
 								<img src="img/menthol.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
 								<span class="price">435 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочноe с ментоловым сиропом</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочноe с ментоловым сиропом</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -235,7 +235,7 @@
 							<article class="catalog-item">
 								<img src="img/black-chocolate.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
 								<span class="price">355 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочное с кусочками черного шоколада</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочное с кусочками черного шоколада</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>
@@ -243,7 +243,7 @@
 							<article class="catalog-item">
 								<img src="img/mint.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
 								<span class="price">420 &#8381;/<span class="units">кг</span></span>
-								<p><a class="purchase-link" href="#">Сливочное с мятным сиропом</a></p>
+								<p><a class="purchase-link" href="#"><span>Сливочное с мятным сиропом</span></a></p>
 								<a class="quick-view" href="#">Быстрый просмотр</a>
 							</article>
 						</div>	
@@ -254,6 +254,7 @@
 						<a class="number number-two" href="#">2</a>	
 						<a class="number number-three" href="#">3</a>
 						<a class="number number-fore" href="#">4</a>
+						<a class="number number-five" href="#">5</a>
 						<a  class="forward" href="#">вперед</a>
 					</div>
 				</main>
@@ -266,14 +267,14 @@
 						<a class="social social-vk" href="https://vk.com/feed" target="_blank">Вконтакте</a>
 					</section>
 					<div class="documentation-unit">
-						<a class="doc-item for-suppliers" href="#">Для поставщиков</a>
-						<a class="doc-item about-production" href="#">О производстве</a>
-						<a class="doc-item our-documents" href="#">Наши документы</a>
-						<a class="doc-item environmental-standards" href="#">Экологические стандарты</a>
+						<a class="doc-item for-suppliers" href="#"><span>Для поставщиков</span></a>
+						<a class="doc-item about-production" href="#"><span>О производстве</span></a>
+						<a class="doc-item our-documents" href="#"><span>Наши документы</span></a>
+						<a class="doc-item environmental-standards" href="#"><span>Экологические стандарты<span></a>
 					</div>
 					<div class="copyright">
 						<a class="btn" href="https://htmlacademy.ru"><img src="img/html_academy.png" width="108" height="38" alt="HTML Academy"></a>
-						<p>Сделано в <a class="btn-text" href="https://htmlacademy.ru"> HTML Academy </a>&#169; 2017</p>
+						<p>Сделано в <a class="btn-text" href="https://htmlacademy.ru"><span>HTML Academy</span></a>&#169; 2017</p>
 					</div>
 				</footer>
 			</div>
