--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" >
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" >
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 		<input type="radio" id="btn-1" name="toggle" checked>
     <input type="radio" id="btn-2" name="toggle">
     <input type="radio" id="btn-3" name="toggle">			
-	<div class="site-wrapper">
-    <div class="content-wrapper">
-			<header class="main-header">
+		<div class="site-wrapper">
+			<div class="content-wrapper">
+				<header class="main-header">
 				<nav class="main-navigation">
 					<a class="index-logo"><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 					<ul>
-						<li class="first-menu one-units"><a href="#">Каталог</a>
+						<li class="first-menu one-units"><a href="#"><span class="menu-link">Каталог</span></a>
 							<ul class="sub-menu">
 								<li><a href="#">Новинки</a></li>
 								<li><a href="catalog.html">Сливочное</a></li>
@@ -26,8 +26,8 @@
 								<li><a href="#">Мелорин</a></li>
 							</ul>
 						</li>				
-						<li class="first-menu two-units"><a href="#">Доставка и оплата</a></li>
-						<li class="first-menu three-units"><a href="#">О Компании</a></li>
+						<li class="first-menu two-units"><a href="#"><span class="menu-link">Доставка и оплата</span></a></li>
+						<li class="first-menu three-units"><a href="#"><span class="menu-link">О Компании</span></a></li>
 					</ul>
 				</nav>
 				<div class="second-block">
@@ -44,8 +44,8 @@
 							<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 								<input class="login-email" id="email" type="email" name="email">
 								<label class="label-email" for="email">Электронная почта</label>
-								<input id="password "type="password" name="password">
-								<label class="label-password" for="password">Пароль</label>
+								<input class="login-pas" id="password-label" type="password" name="password">
+								<label class="label-password" for="password-label">Пароль</label>
 								<div class="login-butons">
 									<input type="submit" name="enter" value="ВОЙТИ">
 									<div class="login-check">
@@ -64,136 +64,148 @@
 						<a href="tel:8812450-25-25">8 812 450-25-25</a>
 					</div>	
 				</div>
-			</header>
-			<main>
-				<div class="slider">
-          <div class="slide" id="slide1">
-            <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
-            <a class="slide-btn" href="#">Давайте оба!</a>
-          </div>
-          <div class="slide" id="slide2">
-            <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
-            <a class="slide-btn" href="#">Давайте оба!</a>
-          </div>
-          <div class="slide" id="slide3">
-            <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
-            <a class="slide-btn" href="#">Давайте оба!</a>
-          </div>
-					 <div class="slider-controls">
-            <label for="btn-1"></label>
-            <label for="btn-2"></label>
-            <label for="btn-3"></label>
-          </div>
-        </div>
-				<section class="promotional-offers ">	
-					<h2>promotional offers</h2>
-					<div class="promotional-left">
-						<div class="promotional-item">
-							<h3>Малинка даром!</h3>
-							<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малиноаого варенья бесплатно.</p>
+				</header>
+				<main>
+					<div class="slider">
+						<div class="slide" id="slide1">
+							<div class="slide-title">Крем-брюле и пломбир с малиновым джемом
+							</div>
+							<a class="slide-btn" href="#">Давайте оба!</a>
 						</div>
-						<a href="#">Хочу варенья!</a>
-					</div>
-					<div class="promotional-right">
-						<div class="promotional-item">
-							<h3>Шоколадки даром!</h3>
-							<p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шеколадной присыпки совершенно бесплатно.</p>
+						<div class="slide" id="slide2">
+							<div class="slide-title">Шоколадный пломбир и лимонный сорбет
+							</div>
+							<a class="slide-btn" href="#">Давайте оба!</a>
 						</div>
-						<a href="#">Хочу шоколадки!</a>
+						<div class="slide" id="slide3">
+							<div class="slide-title">Пломбир с помадкой и клубничный щербет
+							</div>
+							<a class="slide-btn" href="#">Давайте оба!</a>
+						</div>
+						<div class="slider-controls">
+							<label for="btn-1"></label>
+							<label for="btn-2"></label>
+							<label for="btn-3"></label>
+						</div>
 					</div>
-				</section>	
-				<section class="index-content">
-					<h2>Хиты продаж</h2>
-					<article class="catalog-item hit">
-						<img src="img/orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-						<span class="price">310 &#8381;/<span class="units">кг</span></span>
-						<p><a class="purchase-link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
-						<a class="quick-view" href="#">Быстрый просмотр</a>
-					</article>
-					<article class="catalog-item hit">
-						<img src="img/coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-						<span class="price">380 &#8381;/<span class="units">кг</span></span>
-						<p><a class="purchase-link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
-						<a class="quick-view" href="#">Быстрый просмотр</a>
-					</article>
-					<article class="catalog-item hit">
-						<img src="img/strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-						<span class="price">355 &#8381;/<span class="units">кг</span></span>
-						<p><a class="purchase-link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
-						<a class="quick-view" href="#">Быстрый просмотр</a>
-					</article>
-					<article class="catalog-item hit">
-						<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-						<span class="price">415 &#8381;/<span class="units">кг</span></span>
-						<p><a class="purchase-link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
-						<a class="quick-view" href="#">Быстрый просмотр</a>
-					</article>
-				</section>	
-				<section class="our-production" >
-					<h2>Магазин Глейси   &nbsp;— это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-					<div class="production-wrapper">
-					<div class="production-item">
-						<p class="ice-paragraph">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-						<p class="sheet-paragraph">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p> 
-					</div>
-					<div class="production-item">
-						<p class="cow-paragraph">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-						<p class="thermometr-paragraph">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-				  </div>
-					</div>
-				</section>
-				<section class="blog ">
-					<h3>BLOG</h3>
-					<div class="blog-info">
-						<p>Новое в нашем блоге</p>
-						<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
-					</div>
-					<div class="blog-wrapper">
-					</div>
-					<div class="blog-form">
-						<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-						<form class="news-form" action="https://echo.htmlacademy.ru" method="post">
-							<input type="email" name="email"  placeholder="Электронная почта">
-							<button class="btn" type="submit">Отправить</button>
-						</form>
-					</div>
-				</section>
-				<section class="about-us">
-					<h3>about-us</h3>
-					<img src="img/map.jpg" width="1200" height="430" alt="MAP">
-					<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
+					<section class="promotional-offers ">	
+						<h2>promotional offers</h2>
+						<div class="promotional-left">
+							<div class="promotional-item">
+								<h3>Малинка даром!</h3>
+								<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малиноаого варенья бесплатно.</p>
+							</div>
+							<a href="#">Хочу варенья!</a>
+						</div>
+						<div class="promotional-right">
+							<div class="promotional-item">
+								<h3>Шоколадки даром!</h3>
+								<p>При покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шеколадной присыпки совершенно бесплатно.</p>
+							</div>
+							<a href="#">Хочу шоколадки!</a>
+						</div>
+					</section>	
+					<section class="index-content">
+						<h2>Хиты продаж</h2>
+						<article class="catalog-item hit">
+							<img src="img/orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+							<span class="price">310 &#8381;/
+								<span class="units">кг</span>
+							</span>
+							<p><a class="purchase-link" href="#"><span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span></a></p>
+							<div class="quick-view-wrap">
+								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+							</div>
+						</article>
+						<article class="catalog-item hit">
+							<img src="img/coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+							<span class="price">380 &#8381;/<span class="units">кг</span></span>
+							<p><a class="purchase-link" href="#"><span>Сливочно-кофейное с кусочками шоколада</span></a></p>
+							<div class="quick-view-wrap">
+								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+							</div>
+						</article>
+						<article class="catalog-item hit">
+							<img src="img/strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+							<span class="price">355 &#8381;/<span class="units">кг</span></span>
+							<p><a class="purchase-link" href="#"><span>Сливочно-клубничное с присыпкой из белого шоколада</span></a></p>
+							<div class="quick-view-wrap">
+								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+							</div>
+						</article>
+						<article class="catalog-item hit">
+							<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+							<span class="price">415 &#8381;/<span class="units">кг</span></span>
+							<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
+							<div class="quick-view-wrap">
+								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+							</div>
+						</article>
+						</section>	
+						<section class="our-production" >
+							<h2>Магазин Глейси   &nbsp;— это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+							<div class="production-wrapper">
+								<div class="production-item">
+									<p class="ice-paragraph">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+									<p class="sheet-paragraph">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p> 
+								</div>
+								<div class="production-item">
+								<p class="cow-paragraph">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+								<p class="thermometr-paragraph">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+								</div>
+							</div>
+						</section>
+						<section class="blog ">
+							<h3>BLOG</h3>
+							<div class="blog-info">
+								<p>Новое в нашем блоге</p>
+								<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
+							</div>
+							<div class="blog-wrapper">
+							</div>
+							<div class="blog-form">
+								<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+								<form class="news-form" action="https://echo.htmlacademy.ru" method="post">
+									<input type="email" name="email"  placeholder="Электронная почта">
+									<button class="btn" type="submit">Отправить</button>
+								</form>
+							</div>
+						</section>
+					<section class="about-us">
+						<h3>about-us</h3>
+						<img src="img/map.jpg" width="1200" height="430" alt="MAP">
+						<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
 						width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-					<div class="our-adress">
-						<p>Адрес главного офиса<br>
-						и офлайн магазина:</p>
-						<p><b>ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</b></p>
-						<p>Для заказов по телефону:</p>
-						<p><a href="tel:8812450-25-25"><b>8 812 450-25-25</b></a></p>
-						<p>(с 10 до 20 ежедневно)</p>
-						<p><a href="modal-content.html" class="feedback-btn">Форма обратной связи</a></p>
+						<div class="our-adress">
+							<p>Адрес главного офиса<br>и офлайн магазина:</p>
+							<p><b>ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</b></p>
+							<p>Для заказов по телефону:</p>
+							<p><a href="tel:8812450-25-25"><b>8 812 450-25-25</b></a></p>
+							<p>(с 10 до 20 ежедневно)</p>
+							<p><a href="modal-content.html" class="feedback-btn">Форма обратной связи</a></p>
+						</div>
+					</section>
+				</main>
+				<footer class="main-footer">
+					<section class="footer-social">
+						<h3>social</h3>
+						<a class="social social-tw" href="https://twitter.com/?lang=ru" target="_blank">Твитер</a>
+						<a class="social social-inst" href="https://www.instagram.com/" target="_blank">Инстаграм</a>
+						<a class="social social-fb" href="https://www.facebook.com/" target="_blank">Фейсбук</a>
+						<a class="social social-vk" href="https://vk.com/feed" target="_blank">Вконтакте</a>
+					</section>
+					<div class="documentation-unit">
+						<a class="doc-item for-suppliers" href="#"><span>Для поставщиков</span></a>
+						<a class="doc-item about-production" href="#"><span>О производстве</span></a>
+						<a class="doc-item our-documents" href="#"><span>Наши документы</span></a>
+						<a class="doc-item environmental-standards" href="#"><span>Экологические стандарты<span></a>
 					</div>
-				</section>
-		</main>
-		<footer class="main-footer">
-			<section class="footer-social">
-					<h3>social</h3>
-					<a class="social social-tw" href="https://twitter.com/?lang=ru" target="_blank">Твитер</a>
-					<a class="social social-inst" href="https://www.instagram.com/" target="_blank">Инстаграм</a>
-					<a class="social social-fb" href="https://www.facebook.com/" target="_blank">Фейсбук</a>
-					<a class="social social-vk" href="https://vk.com/feed" target="_blank">Вконтакте</a>
-				</section>
-				<div class="documentation-unit">
-					<a class="doc-item for-suppliers" href="#">Для поставщиков</a>
-					<a class="doc-item about-production" href="#">О производстве</a>
-					<a class="doc-item our-documents" href="#">Наши документы</a>
-					<a class="doc-item environmental-standards" href="#">Экологические стандарты</a>
-				</div>
-				<div class="copyright">
-					<a class="btn" href="https://htmlacademy.ru"><img src="img/html_academy.png" width="108" height="38" alt="HTML Academy"></a>
-					<p>Сделано в <a class="btn-text" href="https://htmlacademy.ru"> HTML Academy </a>&#169; 2017</p>
-				</div>
-		</footer>
+					<div class="copyright">
+						<a class="btn" href="https://htmlacademy.ru"><img src="img/html_academy.png" width="108" height="38" alt="HTML Academy"></a>
+						<p>Сделано в <a class="btn-text" href="https://htmlacademy.ru"><span>HTML Academy</span></a>&#169; 2017</p>
+					</div>
+				</footer>
+			</div>
 		</div>
-	</div>
   </body>
 </html>
